# gplotpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE.md  example-3d.cpp  example-complex.cpp  example-histogram.cpp  example-multipleseries.cpp  example-pdfoutput.cpp  example-simple.cpp  example-vec.cpp  example-vec3d.cpp  gplot++.h  package.xml
.github/workflows/: c-cpp.yml  gnuplot_install.inf
cmake/: gplotppConfig.cmake.in
examples/: CMakeLists.txt
examples/src/: example-addpoint.cpp  example-dumb.cpp  example-pngoutput.cpp
src/: example-3d.cpp  example-animated-gif.cpp  example-errorbars.cpp  example-histogram.cpp
tests/: CMakeLists.txt  run_tests.cpp
tests/src/: run_tests.cpp
